--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       href="https://cdn-icons-png.flaticon.com/128/3048/3048122.png"
       type="image/x-icon"
     />
-    <title>Personal Portfolio</title>
+    <title></title>
   </head>
   <body>
     <!-- navigation start here----------------->
     <nav class="navbar full-nav navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">PORTFOLIO.ME</a>
+        <a class="navbar-brand" href="/">BRITTOHEXA</a>
         <button
           class="navbar-toggler"
           type="button"
