--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       href="https://cdn-icons-png.flaticon.com/128/3048/3048122.png"
       type="image/x-icon"
     />
-    <title></title>
+    <title>BRITTOHEXA</title>
   </head>
   <body>
     <!-- navigation start here----------------->
